# git-account-switcher

./: .gitignore  GitAccountSwitcher.ps1  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-desktop.yml  desktop-ci.yml  desktop-release.yml
scripts/: create-latest-json.mjs  release-check.mjs  release-prepare.mjs
src/: App.tsx  main.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx
