[package]
name = "git-account-switcher"
version = "0.1.0"
description = "A small desktop tool for switching local Git and GitHub identities safely."
authors = ["git-account-switcher"]
edition = "2021"
license = "MIT"
repository = ""

[lib]
name = "git_account_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
